Add RecyclerView and Glide [Ver 1.1][Bug : NA][Author:Sumit][Dependency:NA]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,5 +36,7 @@
 
         <activity android:name=".touchevent.TouchEventActivity"/>
 
+        <activity android:name=".recyclerview.RecyclerViewActivity"
+                    android:configChanges="orientation"/>
     </application>
 </manifest>
