--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.maskedgeek.androidinterviewprep"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -26,6 +26,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            aidl.srcDirs = ['src/main/aidl']
+        }
+    }
 }
 
 dependencies {
@@ -37,6 +42,13 @@ dependencies {
     implementation "androidx.fragment:fragment:1.3.2"
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    // Memory Leak detection
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
+    implementation 'com.squareup.leakcanary:leakcanary-object-watcher-android:2.7'
+
+    // Andoroid JetPack Library for encryption
+    implementation 'androidx.security:security-crypto:1.0.0-rc04'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
