--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/server_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/server_app"
         android:supportsRtl="true"
         android:name=".MainApplication"
         android:theme="@style/Theme.AndroidInterviewPrep">
@@ -44,7 +44,18 @@
 
         <activity android:name=".services.ServiceActivity"/>
 
+        <activity android:name=".threads.ThreadLimit"/>
+
+        <activity android:name=".memoryleak.MemoryLeakActivity"/>
+
+        <activity android:name=".sharedpreference.SharedPrefActivity"/>
+
+        <activity android:name=".sharedpreference.EncryptedSharedPrefActivity"/>
+
         <service android:name=".services.BackgroundService"/>
+
+        <service android:name=".aidl.RemoteService"
+                android:exported="true"/>
         
         <receiver android:name=".broadcastreceiver.BatteryBroadcastReceiver">
             <intent-filter>
