--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,24 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.maskedgeek.androidinterviewprep">
 
+    <!--android:name=".MainApplication" -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/server_app"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/server_app"
         android:supportsRtl="true"
-        android:name=".MainApplication"
+        android:name = "com.maskedgeek.advancedinterviewprep.dependency.dagger.stage3.ConsumerApplication"
         android:theme="@style/Theme.AndroidInterviewPrep">
 
+        <!-- Launcher Activity -->
     <activity
         android:name=".MainActivity"
         android:configChanges="orientation">
-        <intent-filter>
-            <action
-                android:name="android.intent.action.MAIN" />
-            <category
-                android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
     </activity>
 
         <activity android:name=".fragment.MainFragmentActivity"
@@ -51,6 +47,15 @@
         <activity android:name=".sharedpreference.SharedPrefActivity"/>
 
         <activity android:name=".sharedpreference.EncryptedSharedPrefActivity"/>
+
+        <activity android:name="com.maskedgeek.advancedinterviewprep.dependency.dagger.stage3.ConsumerActivity">
+            <intent-filter>
+                <action
+                    android:name="android.intent.action.MAIN" />
+                <category
+                    android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <service android:name=".services.BackgroundService"/>
 
