--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
 }
 
 android {
@@ -53,6 +54,11 @@ dependencies {
     //Dagger
     implementation 'com.google.dagger:dagger:2.34.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.34.1'
+
+    implementation 'androidx.core:core-ktx:1.3.2'
+
+    // Lifecycle Components
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
