--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
 
     // Lifecycle Components
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.+"
+
+    //rx java
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
