--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation "androidx.fragment:fragment:1.3.2"
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.room:room-runtime:2.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
     // Memory Leak detection
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
@@ -62,6 +64,7 @@ dependencies {
 
     //rx java
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation "androidx.room:room-rxjava3:2.3.0"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
