[Added Rx And Retrofit Combined Sample][Ver 1.0][Author: Sumit][Bug:NA][Dependency:NA]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,8 @@
 
         <activity android:name="com.maskedgeek.advancedinterviewprep.rxroomdagger.ui.RxDaggerRoomActivity"/>
 
+        <activity android:name="com.maskedgeek.advancedinterviewprep.retrofit.RetrofitActivity"/>
+
         <service android:name=".services.BackgroundService"/>
 
         <service android:name=".aidl.RemoteService"
